[tool.poetry]
name = "distributed_rl_algos"
version = "0.0.1"
description = "Single-file implementations of various distributed reinforcement learning algorithms using PyTorch"
authors = ["Erfan Miahi <mhi.erfan1@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_rl_algos"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
gymnasium = "^1.0.0"
numpy = "^2.2.0"
ray = "^2.40.0"
wandb = "^0.19.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
pylint = "^3.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyx?$'

[tool.isort]
profile = "black"
multi-line-output = 3

[tool.pylint.messages-control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0621",  # redefined-outer-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
] 